policies/supply-chain/verify-sbom-attestation-admit_test/attested-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: attested
spec:
  containers:
    - name: app
      image: ghcr.io/kyverno/zulu:v0.0.14
